fix(build): Java 11 compatibility — Stream.toList() is Java 16+
Round-6 /harden verification pass caught CI red on the Java 11 job
(green on 17/21): the interning test used Stream.toList(), a Java 16
API, and the pom compiles with source/target 11 rather than --release,
so JDK 17+ toolchains (local and the other CI jobs) let it through.
Replaced with Collectors.toList(); sole occurrence tree-wide.

Also: the last stale pre-rewrite chip quote anywhere in the tree
(CrossReactivityGroupsLoader javadoc), caught by the round's exhaustive
five-pattern sweep.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TpH5vn7zRTauJme3ToYWH4